# tmiv-installation

./: README.md
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Implement meeting decision.md  Update TMIV version.md
cmake/: HM.cmake  TMIVConfig.cmake.in  VVenC.cmake  catch2.cmake  clang_format.cmake  clang_tidy.cmake  fmt.cmake  integration_test.cmake  integration_test.py  module_graph.cmake  test_creation.cmake  tmiv_module_creation.cmake
config/ctc/best_reference/: R_1_TMIV_render.json
config/ctc/miv_anchor/: A_1_TMIV_encode.json  A_2_VVenC_encode_tex.cfg  A_4_TMIV_decode.json
config/ctc/miv_dsde_anchor/: G_1_TMIV_encode.json  G_4_TMIV_decode.json  G_6_TMIV_render.json
config/ctc/miv_view_anchor/: V_1_TMIV_encode.json  V_4_TMIV_decode.json
config/ctc/pose_traces/: Ap01.csv  Ap02.csv  Ap03.csv  Bp02.csv  Bp03.csv  Cp01.csv  Cp03.csv  Dp01.csv  Dp02.csv  Dp03.csv  Ep01.csv  Ep02.csv  Ep03.csv  Ip01.csv  Ip02.csv  Ip03.csv  Jp01.csv  Jp02.csv  Jp03.csv  Lp01.csv  Lp02.csv  Lp03.csv  Np03.csv  Pp01.csv  Pp02.csv  Qp01.csv  Qp02.csv  Rp01.csv  Rp02.csv  Rp03.csv  Tp01.csv  Tp02.csv  Tp03.csv  Up01.csv  Up02.csv
config/ctc/sequences/: A.json  C.json  D.json  E.json  I.json  I.md5  J.json  L.json  M.json  M.md5  N.json  O.json  O.md5  P.json  Q.json  R.json  T.json  U.json
config/test/additive_synthesizer/: S_1_TMIV_render.json
config/test/entity_based_coding/: E_1_TMIV_encode.json  E_3_TMIV_mux.json  E_4_TMIV_decode.json
config/test/explicit_occupancy/: O_1_TMIV_encode.json  O_2_HM_encode_geo.cfg  O_2_HM_encode_occ.cfg  O_3_TMIV_mux.json  O_4_TMIV_decode.json
contrib/buildtools2019/: Dockerfile  README.md
doc/: CONTRIBUTING.md
doc/test_model/: index.adoc  pdf_theme.yml
source/Aggregator/: CMakeLists.txt
source/Common/: CMakeLists.txt
source/Common/include/TMIV/Common/: Application.h  Array.h  Bitstream.h  Bitstream.hpp  Bytestream.h  Common.h  Common.hpp  Factory.h  Filter.h  Frame.h  Frame.hpp  Graph.h  Graph.hpp  Half.h  Half.hpp  Json.h  Json.hpp  LinAlg.h  LinAlg.hpp  Math.h  Matrix.h  Matrix.hpp  Quaternion.h  Thread.h  Traits.h  Vector.h  verify.h
source/Common/src/: Application.cpp  Bitstream.cpp  Bitstream.test.cpp  Bytestream.cpp  Common.test.cpp  Filter.test.cpp  Frame.cpp  Frame.test.cpp  Graph.test.cpp  Half.cpp  Json.cpp  Json.test.cpp  Matrix.test.cpp  Quaternion.test.cpp  verify.cpp  verify.test.cpp
source/Decoder/: CMakeLists.txt
source/DepthQualityAssessor/: CMakeLists.txt
source/Encoder/: CMakeLists.txt
source/GeometryQuantizer/: CMakeLists.txt
source/IO/: CMakeLists.txt
source/MivBitstream/: CMakeLists.txt
source/Packer/: CMakeLists.txt
source/Parser/: CMakeLists.txt
source/Pruner/: CMakeLists.txt
source/Renderer/: CMakeLists.txt
source/VideoDecoder/: CMakeLists.txt
source/VideoDecoder/include/TMIV/VideoDecoder/: HmVideoDecoder.h  IVideoDecoder.h  VideoServer.h
source/VideoDecoder/src/: HmVideoDecoder.cpp  IVideoDecoder.cpp  VideoDecoder.main.cpp  VideoServer.cpp
source/ViewOptimizer/: CMakeLists.txt
source/ViewingSpace/: CMakeLists.txt
(+309 files in other folders)
